# oxbed

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  cliff.toml  oxbed-config.toml
branding/: compact.txt  dev.txt  tight.txt
src/: args.rs  chunk.rs  config.rs  embedder.rs  evaluation.rs  index.rs  main.rs  normalization.rs  pipeline.rs  search.rs  stage3.rs  stage4.rs  state.rs
