[package]
name = "oxbed"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
sha2 = "0.10"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
walkdir = "2.3"
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
tempfile = "3.6"
once_cell = "1.21"
toml = "0.7"
